finish 60% and money model not finished yet

--- a/NetBarManageSystem/Facade/Facade.csproj
+++ b/NetBarManageSystem/Facade/Facade.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consumers.cs" />
-    <Compile Include="Users.cs" />
+    <Compile Include="LoginUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
