--- a/NetBarManageSystem/BLL/BLL.csproj
+++ b/NetBarManageSystem/BLL/BLL.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consumers.cs" />
-    <Compile Include="Users.cs" />
+    <Compile Include="LoginUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
