--- a/NetBarManageSystem/NetBarManageSystem/NetBarManageSystem.csproj
+++ b/NetBarManageSystem/NetBarManageSystem/NetBarManageSystem.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
@@ -171,6 +172,9 @@
       <Project>{a0ff7715-5508-4aa1-9fae-dd73758ec429}</Project>
       <Name>Facade</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1_副本.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
